--- a/package.json
+++ b/package.json
@@ -27,10 +27,17 @@
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
+    "css-minimizer-webpack-plugin": "^5.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.1",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "mini-css-extract-plugin": "^2.7.5",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
+    "terser-webpack-plugin": "^5.3.8",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0",
