--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "dev": "cross-env NODE_ENV=development webpack --mode development",
     "build": "cross-env NODE_ENV=production webpack --mode production",
     "watch": "cross-env NODE_ENV=development webpack --mode development --watch",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --open"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
+    "stats": "webpack --json > stats.json && webpack-bundle-analyzer stats.json"
   },
+  "browserslist": "> 0.25%, not dead",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Gemer31/webpack-example.git"
@@ -23,11 +25,21 @@
   },
   "homepage": "https://github.com/Gemer31/webpack-example#readme",
   "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-typescript": "^7.21.5",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^5.0.0",
+    "eslint": "^8.40.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-webpack-plugin": "^4.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.1",
     "less": "^4.1.3",
@@ -44,6 +56,8 @@
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
-    "jquery": "^3.6.4"
+    "@babel/eslint-parser": "^7.21.8",
+    "jquery": "^3.6.4",
+    "webpack-bundle-analyzer": "^4.8.0"
   }
 }
