--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "webpack-example",
+  "name": "my-webpack-project",
   "version": "1.0.0",
-  "description": "webpack example",
+  "description": "My webpack project",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack --mode development",
-    "build": "cross-env NODE_ENV=production webpack --mode production",
-    "watch": "cross-env NODE_ENV=development webpack --mode development --watch",
+    "build": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch",
     "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
-    "stats": "webpack --json > stats.json && webpack-bundle-analyzer stats.json"
+    "stats": "webpack --json > stats.json && webpack-bundle-analyzer stats.json",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "serve": "webpack serve"
   },
   "browserslist": "> 0.25%, not dead",
   "repository": {
@@ -30,6 +33,9 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-typescript": "^7.21.5",
+    "@babel/eslint-parser": "^7.21.8",
+    "webpack-bundle-analyzer": "^4.8.0",
+    "@webpack-cli/generators": "^3.0.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
@@ -56,8 +62,6 @@
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
-    "@babel/eslint-parser": "^7.21.8",
-    "jquery": "^3.6.4",
-    "webpack-bundle-analyzer": "^4.8.0"
+    "jquery": "^3.6.4"
   }
 }
